--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@netlify/plugin-nextjs": "^5.12.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
